@@ -2,7 +2,7 @@
  * File: http.c
  *
  * Copyright (C) 2000-2007 Jorge Arellano Cid <jcid@dillo.org>
- * Copyright (C) 2024 Rodrigo Arias Mallo <rodarima@gmail.com>
+ * Copyright (C) 2024-2025 Rodrigo Arias Mallo <rodarima@gmail.com>
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -425,7 +425,11 @@ static Dstr *Http_make_query_str(DilloWeb *web, bool_t use_proxy, bool_t use_tls
          "User-Agent: %s\r\n"
          "Accept: %s\r\n"
          "%s" /* language */
-         "Accept-Encoding: gzip, deflate\r\n"
+         "Accept-Encoding: gzip, deflate"
+#ifdef ENABLE_BROTLI
+	 ", br"
+#endif
+         "\r\n"
          "%s" /* auth */
          "DNT: 1\r\n"
          "%s" /* proxy auth */
@@ -449,7 +453,11 @@ static Dstr *Http_make_query_str(DilloWeb *web, bool_t use_proxy, bool_t use_tls
          "User-Agent: %s\r\n"
          "Accept: %s\r\n"
          "%s" /* language */
-         "Accept-Encoding: gzip, deflate\r\n"
+         "Accept-Encoding: gzip, deflate"
+#ifdef ENABLE_BROTLI
+	 ", br"
+#endif
+         "\r\n"
          "%s" /* auth */
          "DNT: 1\r\n"
          "%s" /* proxy auth */
